overlays/production/ops/bbb-endpoints.yaml
kind: Endpoints
apiVersion: v1
metadata:
  name: bbb
  namespace: monitoring
  labels:
    k8s-app: bbb-metrics
subsets:
  - addresses:
      - ip: 157.97.110.97
      - ip: 157.97.110.99
      - ip: 157.97.110.111
      - ip: 157.97.110.139
      - ip: 157.97.110.145
      - ip: 157.97.110.157
      - ip: 157.97.110.171
      - ip: 157.97.110.174
      - ip: 157.97.110.179
      - ip: 157.97.110.201
      - ip: 157.97.110.228
      - ip: 157.97.110.234
      - ip: 157.97.110.239
      - ip: 157.97.110.240
      - ip: 157.97.110.254
      - ip: 157.97.111.78
      - ip: 157.97.111.102
      - ip: 157.97.111.189
      - ip: 157.97.111.192
      - ip: 185.48.116.144
      - ip: 185.48.116.171
      - ip: 185.48.116.241
      - ip: 185.48.116.246
      - ip: 185.48.117.23
      - ip: 185.48.117.37
      - ip: 185.48.117.52
      - ip: 185.48.117.109
      - ip: 185.48.118.23
      - ip: 185.48.118.42
      - ip: 185.48.118.45
      - ip: 185.48.118.144
      - ip: 185.48.118.200
      - ip: 85.184.249.58
    ports:
      - name: metrics
        port: 9100
