overlays/production/ops/turn-endpoints.yaml
# defines the IPs of TURN servers that should be scraped by Prometheus
kind: Endpoints
apiVersion: v1
metadata:
  name: turn
  namespace: monitoring
  labels:
    k8s-app: turn-metrics
subsets:
  - addresses: []
    ports:
      - name: metrics
        port: 9100
